# json_of_skyrim

./: .clang-format  .clang-tidy  .gitignore  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
cmake/: clang_format.cmake  clang_tidy.cmake  compiler_compatibility.cmake  compiler_options.cmake  compiler_warnings.cmake
src/: CMakeLists.txt  cli.cpp  josk.cpp  task_find_plugins.cpp  task_initialize_parsing.cpp  task_load.cpp  task_load_order.cpp  task_parse_load_order.cpp  task_parse_plugins.cpp  task_preparse.cpp  task_preparse_plugins.cpp  tasks.cpp  tes_format.cpp  tes_parse.cpp  tes_reader.cpp
src/include/josk/: cli.hpp  task_find_plugins.hpp  task_load.hpp  task_load_order.hpp  task_preparse.hpp  tasks.hpp  tes_format.hpp  tes_helper.hpp  tes_parse.hpp  tes_reader.hpp
